<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_date">Select Date</string>
    <string name="add_expense">Add Expense</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="add_category">Add category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="make_sure_the_details_are_correct">Make sure the details are correct.</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount_three">Enter amount</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="back">Back Button</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>
    <string name="expenses">Expenses</string>
    <string name="conversion">Conversion</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="add_expense_two">Add Expense</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="sync_data">Sync Data</string>
    <string name="category_icon">Category Icon</string>
    <string name="groceries">Groceries</string>
    <string name="nov_17_2024">Nov 17, 2024</string>
    <string name="_45_00">$45.00</string>
    <string name="save_expense">Save Expense</string>
</resources>