<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/rounded_edittext"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/category_icon_iv"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_category"
        android:contentDescription="@string/category_icon"
        app:tint="@color/light_blue"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expense_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groceries"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/expense_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nov_17_2024"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            android:fontFamily="sans-serif"/>
    </LinearLayout>

    <TextView
        android:id="@+id/expense_amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_45_00"
        android:textColor="@color/error_red"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"/>

</LinearLayout>