<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/add_expenses_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.AddExpensesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/dark_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"
                android:textColor="@color/text_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="26sp"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/arrow_back_ic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- Name Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp" />

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="expense_name"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/light_gray"
                    android:background="@android:color/transparent" />
            </LinearLayout>

            <!-- Amount Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp" />

                <EditText
                    android:id="@+id/amount_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="expense_amount"
                    android:hint="@string/enter_amount"
                    android:inputType="numberDecimal|numberSigned"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/light_gray"
                    android:background="@android:color/transparent" />
            </LinearLayout>

            <!-- Currency Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"/>

                <Spinner
                    android:id="@+id/currency_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background"
                    android:padding="12dp"
                    android:popupBackground="@drawable/spinner_dropdown"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <!-- Category Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"/>

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background"
                    android:popupBackground="@drawable/spinner_dropdown"
                    android:padding="12dp"
                    android:spinnerMode="dropdown"/>

                <ImageView
                    android:id="@+id/add_category_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/add_category"
                    android:src="@drawable/ic_add"
                    app:tint="@color/light_blue" />
            </LinearLayout>

            <!-- Date Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_date"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/select_date_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_calendar"
                    android:contentDescription="@string/select_date"
                    app:tint="@color/light_blue" />
            </LinearLayout>

            <!-- Time Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_time"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/select_time_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/select_time"
                    app:tint="@color/light_blue" />
            </LinearLayout>

            <!-- Description Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/text_white"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp" />

                <EditText
                    android:id="@+id/description_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="description"
                    android:hint="@string/enter_description"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/light_gray"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/summary_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_sure_the_details_are_correct"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_expense_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/rounded_button_green"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:elevation="6dp"/>

    </LinearLayout>
</ScrollView>