<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragments.ConversionFragment">

    <TextView
        android:id="@+id/conversion_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/currency_converter"
        android:textColor="@color/text_white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_amount_three"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="@color/text_white"
        android:textColorHint="@color/light_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/from_currency_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/from"
            android:textColor="@color/text_white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/from_currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/spinner_background"
            android:padding="8dp"
            android:popupBackground="@drawable/spinner_dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/to_currency_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/to"
            android:textColor="@color/text_white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/to_currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/spinner_background"
            android:padding="8dp"
            android:popupBackground="@drawable/spinner_dropdown" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/convert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_green"
        android:elevation="6dp"
        android:text="@string/convert"
        android:textColor="@color/text_white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/conversion_result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/result"
        android:textColor="@color/text_white"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:background="@color/dark_background"
            android:elevation="6dp"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/light_blue"
            app:itemTextColor="@color/light_blue"
            app:itemBackground="@android:color/transparent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>