<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_background"
    tools:context=".ui.fragments.SettingsFragment">

    <TextView
        android:id="@+id/settings_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/text_white"
        android:textSize="26sp"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:id="@+id/sync_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_data"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:fontFamily="sans-serif"/>

        <Switch
            android:id="@+id/sync_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/light_blue"
            android:trackTint="@color/light_gray"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/rounded_btn_red"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:elevation="6dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:background="@color/dark_background"
            android:elevation="6dp"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/light_blue"
            app:itemTextColor="@color/light_blue"
            app:itemBackground="@android:color/transparent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>