<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/dark_background"
    tools:context=".ui.fragments.RegisterScreenFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="Register"
        android:textColor="@color/text_white"
        android:textSize="26sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="Enter Username"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="12dp"
            android:textColor="@color/text_white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_email"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:textColor="@color/text_white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_password"
        android:textColor="@color/text_white"
        android:textColorHint="@color/light_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_green"
        android:elevation="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:letterSpacing="0.1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>